--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soya Farming - VinaSoy</title>
+    <base href="/soya-farming-game/">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
